--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <!--
           - testimonials
         -->
-
+        <!--
         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
@@ -293,10 +293,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-1.png" alt="Person1" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Person1</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -380,11 +380,11 @@
           </ul>
 
         </section>
-
+      -->
 
         <!--
           - testimonials modal
-        -->
+        
 
         <div class="modal-container" data-modal-container>
 
@@ -425,7 +425,7 @@
           </section>
 
         </div>
-
+      -->
 
         <!--
           - clients
