--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <span>Show Contact Info</span>
 
           <ion-icon name="chevron-down"></ion-icon>
         </button>
