--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <h4 class="h4 service-item-title">Open Source development</h4>
 
                 <p class="service-item-text">
-                  Looking to start on open source development projects .
+                  Looking to start contributing to open source development projects .
                 </p>
               </div>
 
